-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------
March 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Now compiles :)
	
February 28 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * kamikaze dwarfs sing hymns
  * limbs cut off by leprosy go to the inventory not to the ground
  * Carnivorous plants can now (probably) eat.
  * some wands are teleported to kamikaze dwarfs in the cathedral (if they are 
	kamikaze weapons)
	
February 11 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Rather a large doc update
  * One typo fix

January 14 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Small bug corrected in the stamina regeneration
  * One typo fix

December 15 2004 Heikki Sairanen <first.last@tut.fi>

  * "magpie critically peck you" corrected

December 14 2004 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * History-related doc updates, especially in the Doc/Obsolete directory