@@ -329,7 +329,8 @@ playerkind
   NameSingular = "human";
   AttachedGod = SEGES;
   DisplacePriority = 2;
-  Inventory == amulet(AMULET_OF_LIFE_SAVING) { Times = BONUS_LIVES; }
+  Inventory == holybook(MELLIS);
+/* amulet(AMULET_OF_LIFE_SAVING) { Times = BONUS_LIVES; } */
 }
 
 petrus
