@@ -8,6 +8,10 @@
 -----------------------------------------------------------------------------
 March 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
 
+  * Ighalli's god changed integrated. AUTHORS file may need tweaking in the future.
+
+March 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
+
   * Now compiles :)
 	
 February 28 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
